[project]
dependencies = [
  "flask>=3.0.0",
  "gunicorn>=21.2.0",
]
description = "Demo Flask application per mostrare best practices"
name = "bob-demo"
requires-python = ">=3.11"
version = "1.0.0"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
